# fp-homework

./: .stylish-haskell.yaml  stack.yaml
hw1/: hw1.cabal  test.txt
hw1/src/: A1Simple.hs  A2Lists.hs  A3Types.hs  A4Fold.hs  A5Monoids.hs  Tree.hs  TreePrinters.hs
hw1/test/: A1SimpleSpec.hs  A2ListsSpec.hs  A3TypesSpec.hs  A4FoldSpec.hs  A5MonoidsSpec.hs
hw2/: hw1.ca11bal  hw2.cabal
hw2/src/: AParser.hs  B1Math.hs  B2NonDetMath.hs  B3Monad.hs  B3MonadFish.hs  B3MonadJoin.hs  B4Const.hs  B4Either.hs  B4Identity.hs  B4Pair.hs  B4Tree.hs  LetParser.hs  Lib2.hs  SExpr.hs
hw2/test/: ParserSpec.hs  SimpleSpec.hs
hw3/: hw3.cabal
hw3/src/: Lib.hs
hw4/: hw4.cabal
hw4/src/: FS.hs  TH_L1.hs  TextModule.hs
