name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              CawaEast
maintainer:          777.777.1234@mail.ru
copyright:           2017 CawaEast

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     A1Simple
                    ,  A2Lists
                    ,  A3Types
                    ,  A4Fold
                    ,  A5Monoids
                    ,  TreePrinters
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , random
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       A1SimpleSpec
                    ,  A2ListsSpec
                    ,  A3TypesSpec
                    ,  A4FoldSpec
                    ,  A5MonoidsSpec
  build-depends:       base
                    ,  hw1
                    ,  hspec
                    ,  random
  default-language:    Haskell2010