name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              CawaEast
maintainer:          777.777.1234@mail.ru
copyright:           2017 CawaEast

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     B1Math
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010