name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              CawaEast
maintainer:          777.777.1234@mail.ru
copyright:           2017 CawaEast

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     B1Math,
                       B2NonDetMath,
                       B3Monad,
                       B3MonadFish,
                       B3MonadJoin,
                       B4Identity,
                       AParser,
                       SExpr,
                       LetParser
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
  
test-suite hw2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       SimpleSpec
  build-depends:       base
                    ,  hw2
                    ,  hspec
  default-language:    Haskell2010